# rag-chatbot

./: README.md
chatbot/: .gitignore  README.md  pyproject.toml
chatbot/docs/: roadmap.md  session_logs.md
chatbot/src/: .env-example  chroma_utils.py  db_utils.py  langchain_utils.py  llm.py  log_schema.py  main.py  pdf_utils.py  pydantic_models.py  test.py  vector_store.py
chatbot/src/api/: api_controller.py
chatbot/src/api/routes/: __init__.py  ask.py  home.py  upload.py
chatbot/src/api/services/: history_service.py  llm.py  pdf_record_service.py  pdf_utils.py  vector_store.py
chatbot/src/api/state/: vector_store_state.py
chatbot/src/api/utils/: __init__.py  generate_session_id.py
chatbot/src/config/: __init__.py  config.py
chatbot/src/db/: __init__.py  engine.py  init_db.py  session.py
chatbot/src/logging_utils/: __init__.py  config.py  formatter.py  session_logger.py
chatbot/src/models/: history.py  message.py  pdf_record.py
chatbot/src/schemas/: __init__.py  message_response.py
docs/: next_steps.md  references.md  roadmap.md  session_logs.md
