[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.20",
    "fastapi>=0.116.1",
    "huggingface-hub>=0.34.4",
    "langchain-community>=0.3.28",
    "langchain-huggingface>=0.3.1",
    "langchain>=0.3.27",
    "pymupdf>=1.26.4",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.0",
    "uvicorn>=0.35.0",
]
